# WaveQL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: adapters.md  api.md  architecture.md  auth.md  cdc.md  error-handling.md  index.md  performance.md  quickstart.md  schema-inference.md  tutorial.md
examples/: async_example.py  demo.py  jira_example.py  servicenow_example.py
tests/: __init__.py  test_async.py  test_auth.py  test_cdc.py  test_connection_pool.py  test_core.py  test_jira_adapter.py  test_materialized_views.py  test_observability.py  test_optimizer.py  test_quoted_identifiers.py  test_rest_adapter.py  test_salesforce_adapter.py  test_schema_inference.py  test_servicenow_adapter.py  test_sql_pass_through.py  test_sqlalchemy.py
waveql/: __init__.py  async_connection.py  async_cursor.py  connection.py  connection_base.py  cursor.py  exceptions.py  observability.py  py.typed  query_planner.py  schema_cache.py
waveql/adapters/: __init__.py  base.py  file_adapter.py  jira.py  registry.py  rest_adapter.py  salesforce.py  servicenow.py  sql.py
waveql/auth/: __init__.py  manager.py
waveql/cdc/: __init__.py  models.py  providers.py  stream.py
waveql/materialized_view/: __init__.py  manager.py  models.py  registry.py  storage.py  sync.py
waveql/sqlalchemy/: __init__.py  dialect.py
waveql/utils/: __init__.py  connection_pool.py  rate_limiter.py  schema.py  streaming.py
