[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waveql"
version = "0.1.0"
description = "Open-source universal Python connector for APIs - Query any data source with SQL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "WaveQL Contributors" }]
keywords = ["sql", "api", "connector", "duckdb", "servicenow", "salesforce", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "requests>=2.31",
    "authlib>=1.3",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "responses",
    "respx",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/waveql/waveql"
Documentation = "https://github.com/waveql/waveql#readme"
Repository = "https://github.com/waveql/waveql"

[tool.hatch.build.targets.wheel]
packages = ["waveql"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[project.entry-points."sqlalchemy.dialects"]
waveql = "waveql.sqlalchemy.dialect:WaveQLDialect"
"waveql.servicenow" = "waveql.sqlalchemy.dialect:WaveQLDialect"
"waveql.salesforce" = "waveql.sqlalchemy.dialect:WaveQLDialect"
"waveql.jira" = "waveql.sqlalchemy.dialect:WaveQLDialect"
"waveql.rest" = "waveql.sqlalchemy.dialect:WaveQLDialect"
"waveql.file" = "waveql.sqlalchemy.dialect:WaveQLDialect"

